<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Make this a fragment? -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dip" >

    <TextView 
        android:labelFor="@+id/notificationNameField"
        android:text="@string/notificationNameFieldTitle"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText
        android:id="@id/notificationNameField"
        android:inputType="text"
        android:textSize="16sp" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginBottom="10dip">
                <requestFocus />
    </EditText>
    
    <TextView 
        android:labelFor="@+id/notificationTitleField"
        android:text="@string/notificationTitleFieldTitle"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText
	    android:id="@id/notificationTitleField"
	    android:inputType="text"
	    android:textSize="16sp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:layout_marginBottom="10dip"/>
    
    <TextView 
        android:labelFor="@+id/notificationMessageField"
        android:text="@string/notificationMessageFieldTitle"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText
        android:id="@id/notificationMessageField"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
    	android:layout_marginBottom="10dip"	/>
    
    <TextView 
        android:text="@string/notificationSequenceFieldTitle"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <Spinner 
        android:id="@+id/notificationSequencePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Space 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/notificationCreateButton"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:text="@string/notificationCreateButton"
        android:onClick="createNotification"
        />
</LinearLayout>
