<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/sequenceNameField"
            android:hint="@string/sequenceNameEntryHint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="16sp"
            style="?android:attr/buttonStyleSmall"
            android:enabled="false"
            android:text="@string/saveBtnTitle" />

        <Button
            android:id="@+id/newButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="16sp"
            style="?android:attr/buttonStyleSmall"
            android:enabled="false"
            android:text="@string/newBtnTitle" />

    </LinearLayout>

    <TextView
        android:id="@+id/sequenceDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" 
        android:background="@drawable/border"
        android:visibility="invisible"
        android:hint=" "
        android:paddingLeft="6dp"
    	android:paddingRight="6dp"
    	android:paddingTop="6dp"
    	android:paddingBottom="6dp"
     />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView> 

</LinearLayout>
